--- a/index.html
+++ b/index.html
@@ -70,20 +70,18 @@
         <div class="confirm">
           <ul>
             <li>
-              <button>
-                <a href="#" aria-label="Proceed to Payment"
-                  >Proceed to Payment</a
-                >
-              </button>
+              <a href="#" aria-label="Proceed to Payment">Proceed to Payment</a>
             </li>
             <li><a href="#" aria-label="Cancel Order">Cancel Order</a></li>
           </ul>
         </div>
       </div>
     </main>
-    <!-- <div class="attribution">
+    <footer>
+      <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+    </footer>
   </body>
 </html>
