--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
         </div>
 
-        <div class="plan">
+        <div class="price">
           <ul>
             <li>
               <img
@@ -70,18 +70,20 @@
         <div class="confirm">
           <ul>
             <li>
-              <a href="#" aria-label="Proceed to Payment">Proceed to Payment</a>
+              <a href="#" aria-label="Proceed to Payment" class="confirm-btn"
+                >Proceed to Payment</a
+              >
             </li>
             <li><a href="#" aria-label="Cancel Order">Cancel Order</a></li>
           </ul>
         </div>
       </div>
     </main>
-    <footer>
-      <!-- <div class="attribution">
+    <!-- <footer>
+      <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-    </footer>
+  </div>
+    </footer> -->
   </body>
 </html>
