--- a/index.html
+++ b/index.html
@@ -40,42 +40,48 @@
             alt=""
           />
         </div>
-        <div class="summary">
-          <h1>Order Summary</h1>
-          <p>
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </p>
-        </div>
+        <div class="card-wrapper">
+          <div class="summary">
+            <h1>Order Summary</h1>
+            <p>
+              You can now listen to millions of songs, audiobooks, and podcasts
+              on any device anywhere you like!
+            </p>
+          </div>
 
-        <div class="price">
-          <ul>
-            <li>
-              <img
-                src="./images/icon-music.svg"
-                width="48"
-                height="48"
-                alt=""
-                aria-hidden="true"
-              />
-            </li>
+          <div class="price">
+            <ul>
+              <li>
+                <img
+                  src="./images/icon-music.svg"
+                  width="48"
+                  height="48"
+                  alt=""
+                  aria-hidden="true"
+                />
+              </li>
 
-            <li>
-              <p>Annual Plan</p>
-              <p>$59.99/year</p>
-            </li>
-            <li><a href="#" aria-label="Change Price Plan">Change</a></li>
-          </ul>
-        </div>
-        <div class="confirm">
-          <ul>
-            <li>
-              <a href="#" aria-label="Proceed to Payment" class="confirm-btn"
-                >Proceed to Payment</a
-              >
-            </li>
-            <li><a href="#" aria-label="Cancel Order">Cancel Order</a></li>
-          </ul>
+              <li>
+                <p>Annual Plan</p>
+                <p>$59.99/year</p>
+              </li>
+              <li><a href="#" aria-label="Change Price Plan">Change</a></li>
+            </ul>
+          </div>
+          <div class="confirm">
+            <ul>
+              <li>
+                <a href="#" aria-label="Proceed to Payment" class="confirm-btn"
+                  >Proceed to Payment</a
+                >
+              </li>
+              <li>
+                <a href="#" aria-label="Cancel Order" class="cancel"
+                  >Cancel Order</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
