--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
     <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Order summary card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   </head>
   <body>
     <main class="container">
@@ -76,7 +70,7 @@
                 >
               </li>
               <li>
-                <a href="#" aria-label="Cancel Order" class="cancel"
+                <a href="#" aria-label="Cancel Order" class="cancel-btn"
                   >Cancel Order</a
                 >
               </li>
@@ -85,11 +79,23 @@
         </div>
       </div>
     </main>
-    <!-- <footer>
+    <footer>
       <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-    </footer> -->
+        <p>
+          Challenge by
+          <a
+            href="https://www.frontendmentor.io?ref=challenge"
+            aria-label="Frontendmentor.io Homepage"
+            target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a
+            href="https://www.frontendmentor.io/profile/peterhannell"
+            aria-label="My frontendmentor.io profile"
+            >Peter Hannell</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
